--- a/.github/workflows/Build TTYD OpenWrt.yml
+++ b/.github/workflows/Build TTYD OpenWrt.yml
@@ -8,85 +8,93 @@ on:
 permissions:
   contents: write
 
-env:
-  TZ: Asia/Shanghai
-
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        sdk_config:
-          # x86架构
-          - { platform: "x86_64", sdk_url: "https://downloads.openwrt.org/releases/23.05.3/targets/x86/64/openwrt-sdk-23.05.3-x86-64_gcc-11.3.0_musl.Linux-x86_64.tar.xz", ver: "ipk" }
-          - { platform: "i386_pentium4", sdk_url: "https://downloads.openwrt.org/releases/23.05.3/targets/x86/generic/openwrt-sdk-23.05.3-x86-generic_gcc-11.3.0_musl.Linux-x86_64.tar.xz", ver: "ipk" }
-          
-          # ARM64架构
-          - { platform: "aarch64_cortex-a53", sdk_url: "https://downloads.openwrt.org/releases/23.05.3/targets/armvirt/64/openwrt-sdk-23.05.3-armvirt-64_gcc-11.3.0_musl.Linux-x86_64.tar.xz", ver: "ipk" }
-          - { platform: "aarch64_cortex-a72", sdk_url: "https://downloads.openwrt.org/releases/23.05.3/targets/mvebu/cortexa72/openwrt-sdk-23.05.3-mvebu-cortexa72_gcc-11.3.0_musl.Linux-x86_64.tar.xz", ver: "ipk" }
-          - { platform: "aarch64_generic", sdk_url: "https://downloads.openwrt.org/releases/23.05.3/targets/rockchip/armv8/openwrt-sdk-23.05.3-rockchip-armv8_gcc-11.3.0_musl.Linux-x86_64.tar.xz", ver: "ipk" }
-          
-          # ARM架构
-          - { platform: "arm_cortex-a7", sdk_url: "https://downloads.openwrt.org/releases/23.05.3/targets/sunxi/cortexa7/openwrt-sdk-23.05.3-sunxi-cortexa7_gcc-11.3.0_musl_eabi.Linux-x86_64.tar.xz", ver: "ipk" }
-          - { platform: "arm_cortex-a9", sdk_url: "https://downloads.openwrt.org/releases/23.05.3/targets/mvebu/cortexa9/openwrt-sdk-23.05.3-mvebu-cortexa9_gcc-11.3.0_musl_eabi.Linux-x86_64.tar.xz", ver: "ipk" }
-          - { platform: "arm_cortex-a15", sdk_url: "https://downloads.openwrt.org/releases/23.05.3/targets/sunxi/cortexa15/openwrt-sdk-23.05.3-sunxi-cortexa15_gcc-11.3.0_musl_eabi.Linux-x86_64.tar.xz", ver: "ipk" }
-          - { platform: "arm_mpcore", sdk_url: "https://downloads.openwrt.org/releases/23.05.3/targets/kirkwood/generic/openwrt-sdk-23.05.3-kirkwood-generic_gcc-11.3.0_musl_eabi.Linux-x86_64.tar.xz", ver: "ipk" }
-          
-          # MIPS架构
-          - { platform: "mips_24kc", sdk_url: "https://downloads.openwrt.org/releases/23.05.3/targets/ath79/generic/openwrt-sdk-23.05.3-ath79-generic_gcc-11.3.0_musl.Linux-x86_64.tar.xz", ver: "ipk" }
-          - { platform: "mipsel_24kc", sdk_url: "https://downloads.openwrt.org/releases/23.05.3/targets/ramips/mt76x8/openwrt-sdk-23.05.3-ramips-mt76x8_gcc-11.3.0_musl.Linux-x86_64.tar.xz", ver: "ipk" }
-          - { platform: "mips64_octeon", sdk_url: "https://downloads.openwrt.org/releases/23.05.3/targets/octeon/generic/openwrt-sdk-23.05.3-octeon-generic_gcc-11.3.0_musl.Linux-x86_64.tar.xz", ver: "ipk" }
-          
-          # RISC-V架构
-          - { platform: "riscv64_riscv64", sdk_url: "https://downloads.openwrt.org/releases/23.05.3/targets/visionfive2/generic/openwrt-sdk-23.05.3-visionfive2-generic_gcc-11.3.0_musl.Linux-x86_64.tar.xz", ver: "ipk" }
+        include:
+          # x86_64
+          - platform: "x86_64"
+            sdk_url: "https://downloads.openwrt.org/releases/22.03.5/targets/x86/64/openwrt-sdk-22.03.5-x86-64_gcc-11.2.0_musl.Linux-x86_64.tar.xz"
+            target: "x86/64"
 
-    name: Build ${{ matrix.sdk_config.platform }}
+          # aarch64_cortex-a53
+          - platform: "aarch64_cortex-a53" 
+            sdk_url: "https://downloads.openwrt.org/releases/22.03.5/targets/armvirt/64/openwrt-sdk-22.03.5-armvirt-64_gcc-11.2.0_musl.Linux-x86_64.tar.xz"
+            target: "armvirt/64"
+
+          # aarch64_cortex-a72
+          - platform: "aarch64_cortex-a72"
+            sdk_url: "https://downloads.openwrt.org/releases/22.03.5/targets/mvebu/cortexa72/openwrt-sdk-22.03.5-mvebu-cortexa72_gcc-11.2.0_musl.Linux-x86_64.tar.xz"
+            target: "mvebu/cortexa72"
+
+          # arm_cortex-a7
+          - platform: "arm_cortex-a7"
+            sdk_url: "https://downloads.openwrt.org/releases/22.03.5/targets/sunxi/cortexa7/openwrt-sdk-22.03.5-sunxi-cortexa7_gcc-11.2.0_musl_eabi.Linux-x86_64.tar.xz"
+            target: "sunxi/cortexa7"
+
+          # mips_24kc
+          - platform: "mips_24kc"
+            sdk_url: "https://downloads.openwrt.org/releases/22.03.5/targets/ath79/generic/openwrt-sdk-22.03.5-ath79-generic_gcc-11.2.0_musl.Linux-x86_64.tar.xz"
+            target: "ath79/generic"
+
+          # mipsel_24kc
+          - platform: "mipsel_24kc"
+            sdk_url: "https://downloads.openwrt.org/releases/22.03.5/targets/ramips/mt76x8/openwrt-sdk-22.03.5-ramips-mt76x8_gcc-11.2.0_musl.Linux-x86_64.tar.xz"
+            target: "ramips/mt76x8"
+
+    name: Build ${{ matrix.platform }}
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup environment
+      - name: Setup build environment
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential libssl-dev libncurses5-dev unzip gawk zlib1g-dev
+          sudo apt-get install -y build-essential libncurses5-dev libssl-dev \
+          unzip gawk zlib1g-dev file python3 python3-distutils wget
 
-      - name: Download and setup SDK
+      - name: Download SDK
         run: |
-          echo "Downloading SDK for ${{ matrix.sdk_config.platform }}"
-          wget -q ${{ matrix.sdk_config.sdk_url }} -O sdk.tar.xz
-          tar -xf sdk.tar.xz
-          mv openwrt-sdk-*/ sdk/
-          cd sdk
-          
-          # 清理现有的包
-          find . -name "*libuv*" -type d | xargs rm -rf 2>/dev/null || true
-          find . -name "*libwebsockets*" -type d | xargs rm -rf 2>/dev/null || true
-          find . -name "*ttyd*" -type d | xargs rm -rf 2>/dev/null || true
+          echo "Downloading SDK for ${{ matrix.platform }}"
+          wget -q ${{ matrix.sdk_url }} -O sdk.tar.xz
+          mkdir sdk
+          tar -xf sdk.tar.xz -C sdk --strip-components=1
+          ls -la sdk/
 
-      - name: Copy packages to SDK
+      - name: Prepare packages
         run: |
           cd sdk
-          mkdir -p package/ttyd
           
-          # 复制所有包文件
-          if [ -d "$GITHUB_WORKSPACE/package" ]; then
-            cp -r $GITHUB_WORKSPACE/package/* package/
+          # 检查仓库结构
+          echo "Repository structure:"
+          find ../ -name "Makefile" | head -10
+          ls -la ../
+          
+          # 复制包到SDK
+          if [ -d "../package" ]; then
+            echo "Copying package directory..."
+            cp -r ../package/* package/
           else
-            # 如果包在根目录
-            find $GITHUB_WORKSPACE -maxdepth 1 -name "Makefile" -o -name "*.mk" | head -10
-            cp -r $GITHUB_WORKSPACE/* package/ttyd/ 2>/dev/null || true
+            echo "Copying individual packages..."
+            # 假设包在根目录
+            for pkg in libuv libwebsockets-full ttyd luci-app-ttyd; do
+              if [ -d "../$pkg" ]; then
+                cp -r "../$pkg" "package/"
+              fi
+            done
           fi
           
-          echo "Package structure:"
+          echo "Packages in SDK:"
           find package -name "Makefile" | head -10
 
-      - name: Configure and build
+      - name: Configure build
         run: |
           cd sdk
-          set -e
-          
-          # 基本配置
+          # 创建基本配置
           cat > .config << 'EOF'
+CONFIG_TARGET_${{ matrix.target.replace('/', '_') }}=y
 CONFIG_ALL_NONSHARED=n
 CONFIG_ALL_KMODS=n
 CONFIG_ALL=n
@@ -96,64 +104,82 @@ CONFIG_PACKAGE_libwebsockets-full=y
 CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 EOF
-
-          # 应用配置
-          make defconfig
           
-          echo "=== 开始编译依赖包 ==="
+          # 替换斜杠为下划线
+          sed -i 's|/|_|g' .config
+          
+          make defconfig
+          echo "Build configuration:"
+          grep "CONFIG_PACKAGE" .config || true
+
+      - name: Build dependencies
+        run: |
+          cd sdk
+          echo "Building dependencies for ${{ matrix.platform }}..."
           
           # 编译libuv
           if [ -d "package/libuv" ]; then
-            echo "编译 libuv..."
+            echo "Building libuv..."
             make package/libuv/compile -j$(nproc) V=0
           fi
           
-          # 编译libwebsockets-full
+          # 编译libwebsockets
           if [ -d "package/libwebsockets-full" ]; then
-            echo "编译 libwebsockets-full..."
+            echo "Building libwebsockets-full..."
             make package/libwebsockets-full/compile -j$(nproc) V=0
           elif [ -d "package/libwebsockets" ]; then
-            echo "编译 libwebsockets..."
+            echo "Building libwebsockets..."
             make package/libwebsockets/compile -j$(nproc) V=0
           fi
+
+      - name: Build ttyd
+        run: |
+          cd sdk
+          echo "Building ttyd for ${{ matrix.platform }}..."
           
-          echo "=== 开始编译TTYD ==="
-          
-          # 编译ttyd
           if [ -d "package/ttyd" ]; then
-            echo "编译 ttyd..."
             make package/ttyd/compile -j$(nproc) V=s
+          else
+            echo "ERROR: ttyd package not found"
+            exit 1
           fi
+
+      - name: Build luci-app-ttyd
+        run: |
+          cd sdk
+          echo "Building luci-app-ttyd for ${{ matrix.platform }}..."
           
-          # 编译luci-app-ttyd
           if [ -d "package/luci-app-ttyd" ]; then
-            echo "编译 luci-app-ttyd..."
             make package/luci-app-ttyd/compile -j$(nproc) V=0
+          else
+            echo "WARNING: luci-app-ttyd package not found"
           fi
 
       - name: Collect packages
         run: |
           cd sdk
-          mkdir -p artifacts/${{ matrix.sdk_config.platform }}
+          mkdir -p ../artifacts/${{ matrix.platform }}
           
-          # 查找所有编译好的包
+          # 查找所有编译的包
           find bin -name "*.ipk" | while read file; do
-            if echo "$file" | grep -q -E "(libuv|libwebsockets|ttyd)"; then
-              cp "$file" artifacts/${{ matrix.sdk_config.platform }}/
+            filename=$(basename "$file")
+            if [[ "$filename" == *"libuv"* ]] || [[ "$filename" == *"libwebsockets"* ]] || [[ "$filename" == *"ttyd"* ]] || [[ "$filename" == *"luci-app-ttyd"* ]]; then
+              cp "$file" ../artifacts/${{ matrix.platform }}/
+              echo "Copied: $filename"
             fi
           done
           
-          echo "为平台 ${{ matrix.sdk_config.platform }} 编译的包:"
-          ls -la artifacts/${{ matrix.sdk_config.platform }}/ || echo "没有找到包"
+          echo "Built packages for ${{ matrix.platform }}:"
+          ls -la ../artifacts/${{ matrix.platform }}/
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: ttyd-${{ matrix.sdk_config.platform }}
-          path: sdk/artifacts/${{ matrix.sdk_config.platform }}/*.ipk
+          name: ttyd-${{ matrix.platform }}
+          path: artifacts/${{ matrix.platform }}/*.ipk
           if-no-files-found: warn
 
-  create-release:
+  release:
     needs: build
     runs-on: ubuntu-latest
     if: github.event_name == 'release'
@@ -161,11 +187,17 @@ EOF
       - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
-          path: artifacts
+          path: dist
           
-      - name: Create release
+      - name: Display structure
+        run: |
+          find dist -name "*.ipk" | head -20
+          echo "Total IPK files:"
+          find dist -name "*.ipk" | wc -l
+
+      - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
-          files: artifacts/**/*.ipk
+          files: dist/**/*.ipk
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
