--- a/.github/workflows/Build TTYD OpenWrt.yml
+++ b/.github/workflows/Build TTYD OpenWrt.yml
@@ -1,4 +1,4 @@
-name: TTYD Multi-Platform Build
+name: Build TTYD for OpenWrt
 
 on:
   workflow_dispatch:
@@ -14,161 +14,80 @@ jobs:
     strategy:
       matrix:
         include:
-          # x86_64
           - platform: "x86_64"
             sdk_url: "https://downloads.openwrt.org/releases/22.03.5/targets/x86/64/openwrt-sdk-22.03.5-x86-64_gcc-11.2.0_musl.Linux-x86_64.tar.xz"
-            target: "x86/64"
-
-          # aarch64_cortex-a53
           - platform: "aarch64_cortex-a53" 
             sdk_url: "https://downloads.openwrt.org/releases/22.03.5/targets/armvirt/64/openwrt-sdk-22.03.5-armvirt-64_gcc-11.2.0_musl.Linux-x86_64.tar.xz"
-            target: "armvirt/64"
-
-          # aarch64_cortex-a72
           - platform: "aarch64_cortex-a72"
             sdk_url: "https://downloads.openwrt.org/releases/22.03.5/targets/mvebu/cortexa72/openwrt-sdk-22.03.5-mvebu-cortexa72_gcc-11.2.0_musl.Linux-x86_64.tar.xz"
-            target: "mvebu/cortexa72"
-
-          # arm_cortex-a7
           - platform: "arm_cortex-a7"
             sdk_url: "https://downloads.openwrt.org/releases/22.03.5/targets/sunxi/cortexa7/openwrt-sdk-22.03.5-sunxi-cortexa7_gcc-11.2.0_musl_eabi.Linux-x86_64.tar.xz"
-            target: "sunxi/cortexa7"
-
-          # mips_24kc
           - platform: "mips_24kc"
             sdk_url: "https://downloads.openwrt.org/releases/22.03.5/targets/ath79/generic/openwrt-sdk-22.03.5-ath79-generic_gcc-11.2.0_musl.Linux-x86_64.tar.xz"
-            target: "ath79/generic"
-
-          # mipsel_24kc
           - platform: "mipsel_24kc"
             sdk_url: "https://downloads.openwrt.org/releases/22.03.5/targets/ramips/mt76x8/openwrt-sdk-22.03.5-ramips-mt76x8_gcc-11.2.0_musl.Linux-x86_64.tar.xz"
-            target: "ramips/mt76x8"
 
     name: Build ${{ matrix.platform }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup build environment
+      - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential libncurses5-dev libssl-dev \
-          unzip gawk zlib1g-dev file python3 python3-distutils wget
+          sudo apt-get install -y build-essential libncurses5-dev libssl-dev unzip gawk zlib1g-dev file python3
 
-      - name: Download SDK
+      - name: Download and extract SDK
         run: |
-          echo "Downloading SDK for ${{ matrix.platform }}"
-          wget -q ${{ matrix.sdk_url }} -O sdk.tar.xz
+          wget ${{ matrix.sdk_url }} -O sdk.tar.xz
           mkdir sdk
           tar -xf sdk.tar.xz -C sdk --strip-components=1
-          ls -la sdk/
 
-      - name: Prepare packages
+      - name: Copy packages to SDK
         run: |
           cd sdk
-          
-          # 检查仓库结构
-          echo "Repository structure:"
-          find ../ -name "Makefile" | head -10
-          ls -la ../
-          
-          # 复制包到SDK
-          if [ -d "../package" ]; then
-            echo "Copying package directory..."
-            cp -r ../package/* package/
-          else
-            echo "Copying individual packages..."
-            # 假设包在根目录
-            for pkg in libuv libwebsockets-full ttyd luci-app-ttyd; do
-              if [ -d "../$pkg" ]; then
-                cp -r "../$pkg" "package/"
-              fi
-            done
-          fi
-          
-          echo "Packages in SDK:"
-          find package -name "Makefile" | head -10
+          cp -r ../package/* package/ || true
+          echo "Packages copied:"
+          ls -la package/
 
       - name: Configure build
         run: |
           cd sdk
-          # 创建基本配置
-          cat > .config << 'EOF'
-CONFIG_TARGET_${{ matrix.target.replace('/', '_') }}=y
-CONFIG_ALL_NONSHARED=n
-CONFIG_ALL_KMODS=n
-CONFIG_ALL=n
-CONFIG_AUTOREMOVE=n
-CONFIG_PACKAGE_libuv=y
-CONFIG_PACKAGE_libwebsockets-full=y
-CONFIG_PACKAGE_ttyd=y
-CONFIG_PACKAGE_luci-app-ttyd=y
-EOF
-          
-          # 替换斜杠为下划线
-          sed -i 's|/|_|g' .config
-          
+          echo "CONFIG_ALL_NONSHARED=n" > .config
+          echo "CONFIG_ALL_KMODS=n" >> .config  
+          echo "CONFIG_ALL=n" >> .config
+          echo "CONFIG_AUTOREMOVE=n" >> .config
+          echo "CONFIG_PACKAGE_libuv=y" >> .config
+          echo "CONFIG_PACKAGE_libwebsockets-full=y" >> .config
+          echo "CONFIG_PACKAGE_ttyd=y" >> .config
+          echo "CONFIG_PACKAGE_luci-app-ttyd=y" >> .config
           make defconfig
-          echo "Build configuration:"
-          grep "CONFIG_PACKAGE" .config || true
 
-      - name: Build dependencies
+      - name: Build libuv
         run: |
           cd sdk
-          echo "Building dependencies for ${{ matrix.platform }}..."
-          
-          # 编译libuv
-          if [ -d "package/libuv" ]; then
-            echo "Building libuv..."
-            make package/libuv/compile -j$(nproc) V=0
-          fi
-          
-          # 编译libwebsockets
-          if [ -d "package/libwebsockets-full" ]; then
-            echo "Building libwebsockets-full..."
-            make package/libwebsockets-full/compile -j$(nproc) V=0
-          elif [ -d "package/libwebsockets" ]; then
-            echo "Building libwebsockets..."
-            make package/libwebsockets/compile -j$(nproc) V=0
-          fi
+          make package/libuv/compile -j$(nproc) V=0
+
+      - name: Build libwebsockets
+        run: |
+          cd sdk
+          make package/libwebsockets-full/compile -j$(nproc) V=0
 
       - name: Build ttyd
         run: |
           cd sdk
-          echo "Building ttyd for ${{ matrix.platform }}..."
-          
-          if [ -d "package/ttyd" ]; then
-            make package/ttyd/compile -j$(nproc) V=s
-          else
-            echo "ERROR: ttyd package not found"
-            exit 1
-          fi
+          make package/ttyd/compile -j$(nproc) V=s
 
-      - name: Build luci-app-ttyd
+      - name: Build luci app
         run: |
           cd sdk
-          echo "Building luci-app-ttyd for ${{ matrix.platform }}..."
-          
-          if [ -d "package/luci-app-ttyd" ]; then
-            make package/luci-app-ttyd/compile -j$(nproc) V=0
-          else
-            echo "WARNING: luci-app-ttyd package not found"
-          fi
+          make package/luci-app-ttyd/compile -j$(nproc) V=0
 
       - name: Collect packages
         run: |
           cd sdk
           mkdir -p ../artifacts/${{ matrix.platform }}
-          
-          # 查找所有编译的包
-          find bin -name "*.ipk" | while read file; do
-            filename=$(basename "$file")
-            if [[ "$filename" == *"libuv"* ]] || [[ "$filename" == *"libwebsockets"* ]] || [[ "$filename" == *"ttyd"* ]] || [[ "$filename" == *"luci-app-ttyd"* ]]; then
-              cp "$file" ../artifacts/${{ matrix.platform }}/
-              echo "Copied: $filename"
-            fi
-          done
-          
+          find bin -name "*.ipk" -exec cp {} ../artifacts/${{ matrix.platform }}/ \;
           echo "Built packages for ${{ matrix.platform }}:"
           ls -la ../artifacts/${{ matrix.platform }}/
 
@@ -177,25 +96,17 @@ EOF
         with:
           name: ttyd-${{ matrix.platform }}
           path: artifacts/${{ matrix.platform }}/*.ipk
-          if-no-files-found: warn
 
-  release:
+  create-release:
     needs: build
     runs-on: ubuntu-latest
     if: github.event_name == 'release'
     steps:
-      - name: Download all artifacts
+      - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
           path: dist
-          
-      - name: Display structure
-        run: |
-          find dist -name "*.ipk" | head -20
-          echo "Total IPK files:"
-          find dist -name "*.ipk" | wc -l
-
-      - name: Create Release
+      - name: Create release
         uses: softprops/action-gh-release@v1
         with:
           files: dist/**/*.ipk
