Update Build TTYD OpenWrt.yml

--- a/.github/workflows/Build TTYD OpenWrt.yml
+++ b/.github/workflows/Build TTYD OpenWrt.yml
@@ -3,6 +3,8 @@
 # Description: Auto compile ttyd with openwrt sdk
 #
 name: "Auto compile ttyd with openwrt sdk"
+permissions:
+  contents: write
 on:
   repository_dispatch:
   workflow_dispatch:
